@@ -79,7 +79,7 @@ extern task_queue tq_timer, tq_immediate, tq_scheduler, tq_disk;
  * "bh_list".  You may call this function only from an interrupt
  * handler or a bottom half handler.
  */
-extern __inline__ void queue_task_irq(struct tq_struct *bh_pointer,
+static __inline__ void queue_task_irq(struct tq_struct *bh_pointer,
 			       task_queue *bh_list)
 {
 	if (!set_bit(0,&bh_pointer->sync)) {
@@ -92,7 +92,7 @@ extern __inline__ void queue_task_irq(struct tq_struct *bh_pointer,
  * queue_task_irq_off: put the bottom half handler "bh_pointer" on the list
  * "bh_list".  You may call this function only when interrupts are off.
  */
-extern __inline__ void queue_task_irq_off(struct tq_struct *bh_pointer,
+static __inline__ void queue_task_irq_off(struct tq_struct *bh_pointer,
 				 task_queue *bh_list)
 {
 	if (!(bh_pointer->sync & 1)) {
@@ -106,7 +106,7 @@ extern __inline__ void queue_task_irq_off(struct tq_struct *bh_pointer,
 /*
  * queue_task: as queue_task_irq, but can be called from anywhere.
  */
-extern __inline__ void queue_task(struct tq_struct *bh_pointer,
+static __inline__ void queue_task(struct tq_struct *bh_pointer,
 			   task_queue *bh_list)
 {
 	if (!set_bit(0,&bh_pointer->sync)) {
@@ -122,7 +122,7 @@ extern __inline__ void queue_task(struct tq_struct *bh_pointer,
 /*
  * Call all "bottom halfs" on a given list.
  */
-extern __inline__ void run_task_queue(task_queue *list)
+static __inline__ void run_task_queue(task_queue *list)
 {
 	struct tq_struct *p;
 
